Changes that improve compatibility w/ the Sixth Edition (V6) UNIX
Thompson shell are marked w/ a `C:' in the details below.

-------------------------------------------------------------------------------
[etsh-current] (development):
	* Work In Progress ( see https://etsh.io/src/current/ )

-------------------------------------------------------------------------------
[etsh-4.7.0] (latest):
*:
	* Changed v6shell (dot) org references to etsh (dot) io,
	  and v6shell.org references to etsh.io too, almost a
	  s/v6shell.org/etsh.io/ in effect, but not quite.

osh.[1c]:
	* New feature; user can set the shell command prompt,
	  and the shell will prompt the user with it.  Doing
	  a `set P value' will get you rolling.

	* Reworded the description of how an interactive shell prompts
	  the user for the sake of clarity.

libexec.etsh/SetP:
	* Added this new command file to help users set P on the fly.

-------------------------------------------------------------------------------
[etsh-4.6.0]:
*:
	* Changed all URLs {https://} from: v6shell.org to: etsh.io {/*} .

defs.h, osh.1, osh.c, sh.h:
	* Added $g as a new etsh / osh parameter / variable.
	  Like $u is the effective user name of the current user,
	  $g is the effective group name.

if.1, util.c:
	* Added two new primaries, -n to test for non-zero length string &
	  -z to test for zero length string, like the same primaries found
	  in test(1).

tests/...:
	* Moved (or renamed) tests/run.osh to tests/run, made some needed
	  changes due to the new name, and regenerated the test logs.

examples/...:
	* ready_rc_files - new sh(1) script to preprocess the example rc files
	  for the install-exp Makefile target.

	* Made many changes revolving around the idea of simplification.

README:
	* CentOS 7.3 is supported.

INSTALL:
	* Made many necessary updates, nothing earth-shattering though.

mkconfig:
	* Renamed the CONFIG_UBUNTU_16 macro to CONFIG_BROKEN.  The reason