@@ -18,5 +18,5 @@
 #	etsh-$X.$Y.$Z           == official release ($Z == 0)
 #	etsh-$X.$Y.$Z           == patched  release ($Z >  0)
 #
-OSH_DATE=	September 24, 2017
+OSH_DATE=	September 27, 2017
 OSH_VERSION=	$(OBN)-current
