@@ -45,4 +45,4 @@ SEE ALSO
 
 	Etsh home page: https://etsh.io/
 
-etsh-4.7.0                    August 16, 2017                 HISTORY(1)
+etsh-current                September 27, 2017                HISTORY(1)
